# Tetris

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project.local  tetriS.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: tetris_project_proposal.md
src/: Board.hs  Game.hs  Tetromino.hs
