cabal-version: 3.0

name:                tetris
version:             0.1.0.0
category:            Game
build-type:          Simple

common warnings
  ghc-options: -Wall

executable tetris
  import:            warnings
  main-is:           Main.hs
  other-modules:     Game
                     Board
                     Tetromino

  build-depends:
    base   >=4.17 && <4.20,
    gloss  >=1.13 && <1.15,
    random >=1.2  && <1.3,

  hs-source-dirs:    app
                     src      
  default-language:  GHC2021

